# Data-Engineering

./: Comparing Apache Spark vs Dask vs Ray.md  DE blended 1 CONTENT.md  docker-compose.yaml  k8s linode apache spark.md  pyproject.toml
lecture-3/: 1_manipulation_filtration.py  2_joins.py  task_7_lazy_execution_.py  task_8_other_.py
